# Basic-Winsock-C2

./: .gitignore  CMakeLists.txt  README.md
winSockClient/: CMakeLists.txt  winSockClient.cpp
winSockServer/: CMakeLists.txt  CMakeLists.txt.bak  winSockServer.cpp
